<resources>
  <string name="app_name">MPrint</string>

  <string name="action_settings">Settings</string>
  <string name="action_find_location">Find</string>

  <string name="nav_home">Home</string>
  <string name="nav_about_us">About</string>
  <string name="nav_privacy_policy">Privacy Policy</string>
  <string name="nav_settings">Settings</string>

  <!-- Bluetooth -->
  <string name="blue_title_paired_devices">Match equipment</string>
  <string name="blue_title_other_devices">Other useful equipment</string>
  <string name="blue_button_scan">Scanning device</string>
  <string name="none_paired">No matching devices</string>
  <string name="select_device">Select the connected device</string>
  <string name="none_found">No device found</string>
  <string name="scanning">Scanning Device&#8230;</string>
  <string name="connect">Search for POS-Printer</string>
</resources>
