<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mcoresoftware.mprint.MainActivity">

  <group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_drawer_home"
        android:title="@string/nav_home"/>
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_drawer_settings"
        android:title="@string/nav_settings"/>
  </group>

  <item android:title="Other">
    <menu>
      <item
        android:id="@+id/nav_about_us"
        android:icon="@drawable/ic_drawer_about"
        android:title="@string/nav_about_us"/>
      <item
        android:id="@+id/nav_privacy_policy"
        android:title="@string/nav_privacy_policy"/>
    </menu>
  </item>

</menu>
