<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

  <TextView android:id="@+id/blue_title_paired_devices"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/blue_title_paired_devices"
      android:visibility="gone"
      android:background="#666"
      android:textColor="#fff"
      android:paddingLeft="5dp"/>

  <ListView android:id="@+id/blue_paired_devices"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:stackFromBottom="true"
      android:layout_weight="1"/>

  <TextView android:id="@+id/blue_title_new_devices"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/blue_title_other_devices"
      android:visibility="gone"
      android:background="#666"
      android:textColor="#fff"
      android:paddingLeft="5dp"/>

  <ListView android:id="@+id/blue_new_devices"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:stackFromBottom="true"
      android:layout_weight="2"/>

  <Button android:id="@+id/blue_button_scan"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/blue_button_scan"/>

</LinearLayout>